refactor: update auth flow, routing, and dependencies
- Updated ProtectedRoute to redirect to /login instead of /
- Replaced AuthContext with AuthProvider and adjusted routing in App.jsx
- Simplified LoginSceen.jsx using SignInPage component
- Updated .gitignore to include all .env files
- Modified jsconfig.json and vite.config.js for better path resolution
- Updated dependencies in package.json and pnpm-lock.yaml

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,8 +1,9 @@
 {
   "compilerOptions": {
-    "baseUrl": ".",
+    "baseUrl": "./",
     "paths": {
-      "@/*": ["src/*"] // Asegúrate de que este alias esté correcto
-    }
-  }
+      "@/*": ["./src/*"] // Asegúrate de que este alias esté correcto
+    },
+  },
+  "include": ["src"]
 }
