--- a/.env
+++ b/.env
@@ -1,6 +1,7 @@
-VITE_FIREBASE_API_KEY=AIzaSyBm6NM35M6ZuZBMrMxOYI7rFj_M_JPXNoU
-VITE_FIREBASE_AUTH_DOMAIN=controlgastos-a441d.firebaseapp.com
-VITE_FIREBASE_PROJECT_ID=controlgastos-a441d
-VITE_FIREBASE_STORAGE_BUCKET=controlgastos-a441d.firebasestorage.app
-VITE_FIREBASE_MESSAGE_SENDER_ID=772478708361
-VITE_FIREBASE_APP_ID=1:1:772478708361:web:307551cd6723ba93bbb458
+# Firebase Configuration
+VITE_FIREBASE_API_KEY=your_api_key_here
+VITE_FIREBASE_AUTH_DOMAIN=your_auth_domain_here
+VITE_FIREBASE_PROJECT_ID=your_project_id_here
+VITE_FIREBASE_STORAGE_BUCKET=your_storage_bucket_here
+VITE_FIREBASE_MESSAGING_SENDER_ID=your_messaging_sender_id_here
+VITE_FIREBASE_APP_ID=your_app_id_here
