feat: add Firebase emulator configuration and update UI components
- Added Firebase emulator configuration files and updated `package.json` with a new script for running the emulator
- Updated `BottomAppBar` component to replace icons with an Avatar
- Modified `App.jsx` to conditionally render `BottomAppBar` based on the route
- Removed unused `react.svg` asset

--- a/firebase/firebase.json
+++ b/firebase/firebase.json
@@ -5,10 +5,19 @@
   },
   "emulators": {
     "auth": {
-      "port": 9099
+      "port": 9099,
+
+      "persist": true,
+      "export-on-exit": "firebase-auth.json",
+      "import": "firebase-auth.json"
     },
     "firestore": {
-      "port": 8080
+      "port": 8080,
+      "host": "localhost",
+      "websocket": true,
+      "persist": true,
+      "export-on-exit": "firestore-data.json",
+      "import": "firestore-data.json"
     },
     "ui": {
       "enabled": true
