refactor(auth): restructure auth service and repository logic
- Replace `authManager.js` with `AuthService.js` and `AuthRepository.js`
- Update `AuthContext.jsx` to use new auth service and repository
- Modify `LoginSceen.jsx` to handle login with new auth service
- Add `notenv` dependency for environment variable management
- Update `FirestoreCRUD.js` to use `setDoc` instead of `addDoc`
- Remove unused imports and clean up code in multiple files

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@mui/material": "^6.4.8",
     "@toolpad/core": "^0.13.0",
     "firebase": "^11.4.0",
+    "notenv": "^2.0.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router": "^7.4.0"
