--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^6.4.8",
     "@mui/material": "^6.4.8",
+    "@mui/x-data-grid": "^7.28.2",
     "@toolpad/core": "^0.13.0",
     "firebase": "^11.4.0",
     "notenv": "^2.0.3",
